feat: add user patch
